--- a/4s/index.html
+++ b/4s/index.html
@@ -2440,6 +2440,39 @@
       <td>Michal Nahman, Siggie Vertommen, Fatimah Mohamied, Zaina Mahmoud, Elif Gül, Samer Alatout</td>
       <td>Session 5b</td>
     </tr>
+	 <tr>
+      <td>12:00-15:00</td>
+      <td>2024-07-17</td>
+      <td>HG Main Building, first floor around the Aula </td>
+      <td>Making and Doing</td>
+      <td>	Griffin Fadellin, Christoph Hanssmann, Rachel Rozanski, Jessie Stainton, Emery Vanderburgh, Arseli Dokumaci, Emily York, Sjamme van de Voort, Elena Lorent, Kaajal Modi, Faidon Papadakis, Risa Schnebly, R. Stuart Geiger, Sarah Klein, Nini Zhou, Sergio Gustavo Astorga, Alka Menon, Ulrike Zeshan, Denisa Kera, Lorenzo Olivieri, Annalisa Pelizza, Mona Hedayati, Shan Wang, Sinziana Alata, Karen Huang, Akshaya Narayanan, Maya Lane, Marieke Meesters, Sandra Calkins, Clemens Driessen, Anne Steele, Mirko Febbo, Alexandra Toland, Olivier Rossel, Benedetta Piantella, Maya Hey, Salla Sariola, Christy Spackman, Sebastian Levar Spivey</td>
+      <td>Making and Doing</td>
+    </tr>
+	
+	 <tr>
+      <td>12:00-15:00</td>
+      <td>2024-07-17</td>
+      <td>NU building ground floor atrium  </td>
+      <td>Making and Doing</td>
+      <td>	Barkha Kagliwal, Suze Berkhout, Marianna Szczygielska, Paul Keil, Laura Kuen, Laureline Chiapello, Torben Elgaard Jensen, Jillian Student, Giulia Bongiorno, Wietse Wiersma, Paul Merchant, Eleanor Hadley Kershaw, Angela Cassidy, Mary Stewart, Rebecca Edgerley, Carolyn Petersen, Nils Matzner, Ben Yau, Sol Martinez Demarco, Alice Ashcroft, Efe Cengiz, Anne Beaulieu, Elisenda Passola i Lizandra</td>
+      <td>Making and Doing</td>
+    </tr>	
+	 <tr>
+      <td>12:00-15:00</td>
+      <td>2024-07-17</td>
+      <td>NU building 2nd floor atrium  </td>
+      <td>Making and Doing</td>
+      <td>	Nicole Goedhart, Andreas Liesenfeld, Eline Ramaaker, Andreu Belsunces, Cecily Klim, Sacramento da Hora Barros, Gabriela De La Rosa, Charbel El-Hani </td>
+      <td>Making and Doing</td>
+    </tr>	
+	<tr>
+      <td>12:00-15:00</td>
+      <td>2024-07-17</td>
+      <td>NU building theatre  </td>
+      <td>Making and Doing Films</td>
+      <td>	Makoto Takahashi, Elisenda Passola i Lizandra, Karl Dagher, Caitlin Kearney, Nicholas McCay,Frankie Mastrangelo,Andrea Kim,Sasha Bergstrom-Katz, Sarah Hartley, Tabor Idema, Megan Milota, Marjoleine van der Meij, Elaine Goldberg, Christopher Lawrence, Andrés Domínguez </td>
+      <td>Making and Doing</td>
+    </tr>
     <tr>
       <td>15:30</td>
       <td>2024-07-17</td>
