--- a/4s/index.html
+++ b/4s/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 </head>
 <body>
+	<a href="#wed">Jump to Wednesday</a>
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -1472,8 +1473,9 @@
       <td>Tarsh Bates, Eleni Michael, Kaajal Modi, Maya Hey, Riina Hannula, Maro Pebo</td>
       <td>Session 3b</td>
     </tr>
+	  
     <tr>
-      <td>08:30</td>
+      <td><a id="wed">08:30</td>
       <td>2024-07-17</td>
       <td>HG-08A00</td>
       <td>Innovation discontinuities</td>
