--- a/4s/index.html
+++ b/4s/index.html
@@ -1466,7 +1466,7 @@
       <td>Session 3b</td>
     </tr>
     <tr>
-      <td>16:00</td>
+      <td>16:00<a id="wed"></a></td>
       <td>2024-07-16</td>
       <td>HG-06A33</td>
       <td>Arts of/for/with microbial care</td>
@@ -1475,7 +1475,7 @@
     </tr>
 	  
     <tr>
-      <td><a id="wed">08:30</td>
+      <td>08:30</td>
       <td>2024-07-17</td>
       <td>HG-08A00</td>
       <td>Innovation discontinuities</td>
@@ -2474,6 +2474,22 @@
       <td>Making and Doing Films</td>
       <td>	Makoto Takahashi, Elisenda Passola i Lizandra, Karl Dagher, Caitlin Kearney, Nicholas McCay,Frankie Mastrangelo,Andrea Kim,Sasha Bergstrom-Katz, Sarah Hartley, Tabor Idema, Megan Milota, Marjoleine van der Meij, Elaine Goldberg, Christopher Lawrence, Andrés Domínguez </td>
       <td>Making and Doing</td>
+    </tr>
+	  <tr>
+      <td>13:30</td>
+      <td>2024-07-17</td>
+      <td>HG-KC07 </td>
+      <td>EASST general meeting</td>
+      <td>EASST Leadership </td>
+      <td>EASST meeting</td>
+    </tr>
+    <tr>
+      <td>15:30</td>
+      <td>2024-07-17</td>
+      <td>Theatre 1, NU building</td>
+      <td>Author meets critics: Fleck Prize</td>
+      <td>Shannon Cram, Warwick Anderson, Vivian Choi, Emily Yates Doerr,  and Michal Nahman</td>
+      <td>Session 6a</td>
     </tr>
     <tr>
       <td>15:30</td>
